# SHL_AI_Intern_Assessment-

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
SHL(Replit)/: main.py  pyproject.toml
SHL(Replit)/attached_assets/: Pasted-https-github-com-Durgesh-Kumar-Dewangan-SHL-tree-main-l_1782907297396.txt
SHL(Replit)/shl-recommender(n)/shl-recommender/: .env  APPROACH.md  Dockerfile  README.md  railway.json
SHL(Replit)/shl-recommender(n)/shl-recommender/app/: config.py  dependencies.py
SHL(Replit)/shl-recommender(n)/shl-recommender/app/data/: catalog_loader.py  shl_catalog.csv
SHL(Replit)/shl-recommender(n)/shl-recommender/app/models/: schemas.py
SHL(Replit)/shl-recommender(n)/shl-recommender/app/prompts/: system_prompt.py
SHL(Replit)/shl-recommender(n)/shl-recommender/app/retrieval/: retriever.py
SHL(Replit)/shl-recommender(n)/shl-recommender/app/services/: conversation_service.py  llm_client.py  safety.py
SHL(Replit)/shl-recommender(n)/shl-recommender/app/static/: index.html
SHL(Replit)/shl-recommender(n)/shl-recommender/eval/: parse_traces.py  run_eval.py
SHL(Replit)/shl-recommender(n)/shl-recommender/scripts/: build_catalog.py
SHL(Replit)/shl-recommender(n)/shl-recommender/tests/: conftest.py  test_conversation_behavior.py  test_safety.py
api/: index.py
app/: config.py  main.py
app/api/: routes.py
app/data/: shl_catalog.json
app/static/: app.js  style.css
app/utils/: logging.py
tests/: test_api.py  test_retrieval.py
