[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "gunicorn>=26.0.0",
    "httpx==0.28.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv==1.0.1",
    "rank-bm25==0.2.2",
    "tenacity==9.0.0",
    "uvicorn[standard]==0.32.1",
]
